# fastpng

./: Dockerfile  LICENSE.MD  README.MD  docker-compose.yaml  pyproject.toml
fastpng/: main.py  settings.py
fastpng/tests/: test_main.py
